@@ -6,10 +6,12 @@ import com.sparta.gymspartaprojectbackend.trainer.entity.Trainer;
 import com.sparta.gymspartaprojectbackend.user.entity.User;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class UserDetailsImpl implements UserDetails {
@@ -58,7 +60,8 @@ public class UserDetailsImpl implements UserDetails {
    */
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return Collections.emptyList();
+    List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+    return authorities;
   }
 
   @Override
